tests/parsing/argument_assigned_twice/stderr.golden
error: reassignment to 'm' argument
bus.fbd +4:18
   |
 4 | Main my_bus(m=1, m=2)
   |                  ^
